--- a/personal website.html
+++ b/personal website.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,18 +11,26 @@
 			margin: 0;
 			padding: 0;
 		}
+
 		.header {
 			background-color: #f0f0f0;
 			padding: 20px;
 			text-align: center;
 		}
+
 		.about-me {
 			padding: 20px;
 		}
-		.education, .work-experience, .portfolio, .skills, .personal-interests {
+
+		.education,
+		.work-experience,
+		.portfolio,
+		.skills,
+		.personal-interests {
 			padding: 20px;
 			border-bottom: 1px solid #ccc;
 		}
+
 		.footer {
 			background-color: #f0f0f0;
 			padding: 10px;
@@ -29,6 +38,7 @@
 		}
 	</style>
 </head>
+
 <body>
 	<div class="header">
 		<h1>Olalere Nurudeen</h1>
@@ -37,53 +47,54 @@
 	<div class="about-me">
 		<h2>About Me</h2>
 		<p>A diligent and industrious tech savvy person. A highly organized and efficient hardworking individual
-whose thorough and precise approach to projects has yielded excellent results. A team motivator with
-self-motivated spirit and genuine inquisitiveness.</p>
-		
+			whose thorough and precise approach to projects has yielded excellent results. A team motivator with
+			self-motivated spirit and genuine inquisitiveness.</p>
+
 	</div>
 	<div class="education">
 		<h2>Education</h2>
 		<p>Diploma/National Diploma/Higher National Diploma</p>
 		<p>HND in Computer Engineering
-The, Polytechnic Ibadan - Ibadan
-May 2021 to August 2023</p>
+			The, Polytechnic Ibadan - Ibadan
+			May 2021 to August 2023</p>
 		<p>OND in Computer Engineering
-The, Polytechnic Ibadan - Ibadan
-May 2017 to November 2019</p>
+			The, Polytechnic Ibadan - Ibadan
+			May 2017 to November 2019</p>
 		<p>Diploma in Computer Engineer
-BAFUTO INSTITUTE OF MANAGEMENT AND INFORMATION TECHNOLOGY - Lagos
-January 2013 to February 2014</p>
+			BAFUTO INSTITUTE OF MANAGEMENT AND INFORMATION TECHNOLOGY - Lagos
+			January 2013 to February 2014</p>
 	</div>
 	<div class="work-experience">
 		<h2>Work Experience</h2>
 		<p>Computer Engineering/ Operator
-Rich Cafe Institute-Lagos
-August 2014 to June 2015</p>
+			Rich Cafe Institute-Lagos
+			August 2014 to June 2015</p>
 		<p>IT Support Technician
-KC Gaming Network (BET9JA)-Lagos
-November 2015 to February 2017</p>
+			KC Gaming Network (BET9JA)-Lagos
+			November 2015 to February 2017</p>
 		<p>I.T Support & Logistics
-FutureMinds Development Initiative-Ibadan
-January 2020 to July 2020</p>
-	
+			FutureMinds Development Initiative-Ibadan
+			January 2020 to July 2020</p>
+
 	</div>
 	<div class="skills">
 		<h2>Skills</h2>
 		<p>Intermediate knowledge in Data Analytics(Python, NumPy, Pandas And Excel</p>
-<p>Proficiency in Microsoft Suite, including, Microsoft Word and Powerpoint</p>
-<p>Operating system,hardware,software,networking and Troubleshooting</p>
-<P>Excellent level of computer Usage</p>
+		<p>Proficiency in Microsoft Suite, including, Microsoft Word and Powerpoint</p>
+		<p>Operating system,hardware,software,networking and Troubleshooting</p>
+		<P>Excellent level of computer Usage</p>
 		<p>Customer service</p>
-<p>Organizational skills</p>
-<p>Communication skills</p>
-<p>Goal oriented and technical problem solving ability</p>
-<p>Good inter-personal relationship and leadership skills</p>
+		<p>Organizational skills</p>
+		<p>Communication skills</p>
+		<p>Goal oriented and technical problem solving ability</p>
+		<p>Good inter-personal relationship and leadership skills</p>
 	</div>
 	<div class="personal-interests">
 		<h2>Personal Interests</h2>
 		<p>I enjoy reading non-fiction books, building computer networks, solving puzzles and socialising with
-friends and family I enjoy reading and learning about the tech industry and learning new things.</p>
-		<p>My passions are Problem solving, continuous learning, helping others, analytical thinking, innovation, customer's satisfaction</p>
+			friends and family I enjoy reading and learning about the tech industry and learning new things.</p>
+		<p>My passions are Problem solving, continuous learning, helping others, analytical thinking, innovation,
+			customer's satisfaction</p>
 		<img src="friends1.jpg" alt="Friends 1">
 		<img src="friends2.jpg" alt="Friends 2">
 		<img src="friends3.jpg" alt="Friends 3">
@@ -95,4 +106,5 @@ friends and family I enjoy reading and learning about the tech industry and lear
 		<p>Copyright 2024 Olalere Nurudeen</p>
 	</div>
 </body>
+
 </html>
