--- a/personal website.html
+++ b/personal website.html
@@ -95,9 +95,10 @@
 			friends and family I enjoy reading and learning about the tech industry and learning new things.</p>
 		<p>My passions are Problem solving, continuous learning, helping others, analytical thinking, innovation,
 			customer's satisfaction</p>
-		<img src="friends1.jpg" alt="Friends 1">
-		<img src="friends2.jpg" alt="Friends 2">
-		<img src="friends3.jpg" alt="Friends 3">
+			<h2>Gallery</h2>
+		<img src="Nurudeen.jpeg" width="300px" alt="Friends 1">
+		<img src="osunlaja.jpeg" width="300px" alt="Friends 2">
+		<img src="folashade.jpeg" width="300px" alt="Friends 3">
 		<img src="friends4.jpg" alt="Friends 4">
 		<img src="friends5.jpg" alt="Friends 5">
 	</div>
