--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 		<img src="Nurudeen.jpeg" width="300px" alt="Friends 1">
 		<img src="osunlaja.jpeg" width="300px" alt="Friends 2">
 		<img src="folashade.jpeg" width="300px" alt="Friends 3">
-		<img src="friends4.jpg" alt="Friends 4">
-		<img src="friends5.jpg" alt="Friends 5">
+		<img src="Adebayo.jpeg" width="300px" alt="Friends 4">
+		<img src="Olalere.jpeg" width="300px" alt="Friends 5">
 	</div>
 	<div class="footer">
 		<p>Contact: olamilekan9194@gmail.com | 07045608751</p>
